<resources>
    <string name="app_name">RaspRemote</string>
    <string name="main_button_air_conditioner">Air conditioner</string>
    <string name="main_button_settings">Settings</string>
    <string name="main_button_wireless_plugs">Wireless plugs</string>
    <string name="item_icon_description">Icon for the kind of remote</string>
    <string name="about_title">About RaspRemote</string>
    <string name="about_description">Application made by eWolvy to control a Raspberry Pi\'s automation systems like air conditioning and smart plugs</string>
    <string name="about_credits">The wireless socket image was downloaded from <a href="https://pixabay.com/es/users/OpenClipart-Vectors-30363/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=155908">OpenClipart-Vectors</a> at <a href="https://pixabay.com/es/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=155908">Pixabay</a>,
        the air-conditioner icon is made by <a href="https://www.flaticon.com/authors/surang" title="surang">Surang</a>
        and the ceiling-lamp icon is made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a>,
        all of them from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
        and are licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></string>
    <string name="menu_main_show_air_conditioners">Show air conditioners</string>
    <string name="menu_main_show_smart_plugs">Show smart plugs</string>
    <string name="menu_main_show_lamps">Show lamps</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Real Remote settings</string>
    <string name="settings_address_label">Server address</string>
    <string name="settings_address_key" translatable="false">address</string>
    <string name="settings_port_label">Server port</string>
    <string name="settings_port_key" translatable="false">port</string>
    <string name="settings_username_key" translatable="false">username</string>
    <string name="settings_username_label">Username</string>
    <string name="settings_password_key" translatable="false">password</string>
    <string name="settings_password_label">Password</string>
    <string name="settings_certificate_key" translatable="false">certificate</string>
    <string name="settings_certificate_label">SSL certificate file</string>
    <string name="settings_file_label">Certificate file</string>
    <string name="settings_file_key" translatable="false">certificate</string>
    <string name="settings_selected_file">"Selected file: "</string>
    <string name="settings_name_label">Name</string>
    <string name="settings_type_label">Type</string>
    <string name="settings_alias_label">Alias</string>
    <string name="settings_certificate_button">Choose file…</string>
    <string name="settings_editAA">Edit air conditioner</string>
    <string-array name="settings_array_types">
        <item>AC - Kaysun</item>
        <item>AC - ProKlima</item>
        <item>AC - General</item>
        <item>Lamp</item>
        <item>Smart plug</item>
    </string-array>
    <string name="transition_name" translatable="false">transition_name</string>
    <string name="menu_edit_save">Save</string>
    <string name="menu_edit_discard">Discard</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_save_message">Do you want to save the device?</string>
    <string name="dialog_confirm_title">Confirm</string>
    <string name="dialog_discard_message">Discard changes and exit?</string>
    <string name="edit_error_empty_name">You must give a name to the device</string>
    <string name="edit_error_empty_server">You must specify the server</string>
    <string name="edit_error_invalid_port">The port number must be between 1 and 65535</string>
    <string name="edit_error_empty_username">You must specify the username</string>
    <string name="edit_error_empty_password">You must specify the password</string>
    <string name="edit_error_empty_alias">You must specify the alias</string>
    <string name="edit_error_empty_certificate">You must select the certificate file</string>
    <string name="menu_main_add_fake_data">Add fake data</string>
    <string name="item_edit_description">Icon to edit the item</string>
    <string name="dialog_ok">OK</string>
    <string name="plug_on">On</string>
    <string name="plug_off">Off</string>
    <string name="plug_1" translatable="false">1</string>
    <string name="plug_2" translatable="false">2</string>
    <string name="plug_3" translatable="false">3</string>
    <string name="plug_4" translatable="false">4</string>
    <string name="plug_all">All</string>
    <string name="lamp_power_button">Power button</string>
    <string name="lamp_night_button">Night mode</string>
    <string name="lamp_less_bright">Less bright</string>
    <string name="lamp_more_bright">Brighter</string>
    <string name="lamp_triangle">Triangle</string>
    <string name="lamp_music">Music</string>
    <string name="lamp_cooler">Cooler color</string>
    <string name="lamp_warmer">Warmer color</string>
    <string name="lamp_heat_cold_gradient">Heat cold gradient</string>
    <string name="lamp_25" translatable="false">25%</string>
    <string name="lamp_50" translatable="false">50%</string>
    <string name="lamp_75" translatable="false">75%</string>
    <string name="lamp_100" translatable="false">100%</string>
    <string name="ac_auto">Auto</string>
    <string name="ac_cool">Cool</string>
    <string name="ac_dry">Dry</string>
    <string name="ac_heat">Heat</string>
    <string name="ac_fan">Fan</string>
    <string name="ac_onoff_description">On/Off sign</string>
    <string name="ac_sign_fan" translatable="false"><![CDATA[>>>]]></string>
    <string name="ac_temp_plus_description">Increase one degree</string>
    <string name="ac_temp_middle_description">Temperature image</string>
    <string name="ac_temp_minus_description">Decrease one degree</string>
    <string name="ac_ac_fan">Fan button</string>
    <string name="ac_mode_description">Mode button</string>
    <string name="ac_off_description">Off button</string>
    <string name="ac_send_description">Send button</string>
    <string name="ac_swing_description">Swing button</string>
    <string name="ac_on_description">On button</string>
    <string name="ac_inactive_temp" translatable="false">--</string>
    <string name="ac_quiet">Quiet</string>
</resources>
