<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:fontFamily="monospace"
        android:text="@string/about_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_about_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/about_description"
        android:textColor="@color/colorSecondaryText"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_about_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/about_credits"
        android:textColor="@color/colorSecondaryText"
        android:textSize="14sp" />
</LinearLayout>